--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
             <artifactId>spring-data-rest-webmvc</artifactId>
             <version>3.1.10.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>2.1.7.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
