--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
+# MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/todolist?useSSL=false&serverTimezone=UTC
 spring.datasource.username=hbstudent
 spring.datasource.password=hbstudent
 
+# JDBC/SQLite
+#server.port=2019
+#spring.jpa.database-platform=com.example.demo.config.SQLiteDialect
+#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
+
+management.endpoints.web.exposure.include=*
